<resources>
    <string name="app_name">bashkirov_opisanie</string>
    <string name="strelka">TextView</string>
    <string name="opisanie">Описание</string>
    <string name="clear">Очистить</string>
    <string name="backtema">TODO</string>
    <string name="vector">TODO</string>
    <string name="sohranit">Button</string>
    <string name="sohran">Сохранить</string>
    <string name="ochistit">очистить</string>
    <string name="sohr">Сохранить</string>
    <string name="ochist">Очистить</string>
    <string name="rechevoyinfolabel">Речевой информатор</string>
    <string name="chislootricatelnihlabel">Число отрицательных этажей</string>
    <string name="proverkalabelbtn">проверка звука</string>
    <string name="naliciezerolabel">Наличие 0 этажа</string>
    <string name="firstlanglabel">Первый язык сообщений</string>
    <string name="secondlanglabel">Второй язык сообщений</string>
    <string name="soundlvllabel">Общее усиление звука</string>
    <string name="seekbarbackground">TODO</string>
    <string name="soundicon">TODO</string>
    <string name="SvyaziLabel">Связи</string>
    <string name="SvyaziTabitem">Связи</string>
    <string name="SostoyanTabitem">Состояние направлений</string>
    <string name="Identylabel">Идентфикатор</string>
    <string name="ipadresslabel">IP-адрес</string>
    <string name="dataportlabel">Порт данных</string>
    <string name="voiceportlabel">Порт звука</string>
    <string name="altipadresslabel">Альт.IP-адрес</string>
    <string name="vozvratlabel">Возврат (мин.)</string>
    <string name="Editlabel">Изменить</string>
    <string name="Deletelabelbtn">Удалить</string>
    <string name="numberlabel">Номер</string>
    <string name="Vozvratlabel">Возврат (мин.)</string>
    <string name="Identificatelabel">Идентфикатор</string>
    <string name="ipadress2label">IP-адрес</string>
    <string name="numiplabel">Ном.IP</string>
    <string name="vozvrat2label">Возврат (мин.)</string>
    <string name="Systemlabel">Система</string>
    <string name="Identificationlabel">Идентификатор</string>
    <string name="macadresslabel">MAC-адрес</string>
    <string name="keylabel">Ключ</string>
    <string name="keyagainlabel">Повтор ключа</string>
    <string name="ntpservlabel">Сервер NTP</string>
    <string name="hourspoyaslabel">Часовой пояс</string>
    <string name="pinglabel">Ping запрещен</string>
    <string name="sostslyjtimelabel">Состояние службы времени</string>
    <string name="chasovoylabel">Часовой пояс</string>
    <string name="istochtimelabel">Источник времени</string>
    <string name="localtimelabel">Локальное время ЛБ</string>
    <string name="refreshlabel">Обновить</string>
    <string name="Proverkazvukabtn">Проверка звука</string>
    <string name="Zvuklabel">Звук</string>
    <string name="Senseinliftlabel">Чувствительность в кабине лифта</string>
    <string name="Senceinmplabel">Чувтвительность в МП</string>
    <string name="gromcostinmplabel">Уровень громкости в МП</string>
    <string name="autolabel">Авто</string>
    <string name="auto2label">Авто</string>
    <string name="background">TODO</string>
    <string name="background2">TODO</string>
    <string name="iconsound">TODO</string>
    <string name="background3">TODO</string>
    <string name="voicelvlicon">TODO</string>
    <string name="background4">TODO</string>
    <string name="seekback">TODO</string>
</resources>